# adk-python

./: .env  .gitignore  README.md  pyproject.toml
.adk/: session.db
agent/: __init__.py  my_agent.py
agent/.adk/: session.db
agent/tmp/agent/: root_agent.yaml
