[project]
name = "adk-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "adk>=0.0.5",
    "duckduckgo-search>=8.1.1",
    "google-adk[extensions]>=1.26.0",
    "google-generativeai>=0.8.6",
    "pypdf2>=3.0.1",
]
